# cpputest_hello_world

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  add.cpp  add.h  discount_provider_interface.h  external_discount.cpp  external_discount.h  external_dp_interface_provider.cpp  external_dp_interface_provider.h  main.cpp  mock_example.cpp  mock_example.h
code/tests/: CMakeLists.txt  test_add.cpp  test_mock.cpp
